test-helm/cls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cls-expose-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cls-expose-nginx.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cls-expose-nginx
            port:
              number: 5055
