test-helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gripo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: gripo.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gripo-frontend
            port:
              number: 3000
